<resources>
	<string name="app_name">Open Locast</string>
    <string name="default_api_url" translatable="false">http://mel-pydev.mit.edu/openlocast/api/</string>
	<string name="app_update_url" translatable="false">http://locast.mit.edu/m/openlocast.json</string>
    <string name="signup_url" translatable="false">http://mel-pydev.mit.edu/openlocast/register/</string>
	<string name="signup_text">Register to join Open Locast</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
	<string name="error_no_providers">Error: no location providers</string>
	<string name="error_no_maps">Error: no map handler present.</string>
	<string name="error_cannot_edit">Sorry, you don\'t have permission to edit this item.</string>
	<string name="error_please_enter_a_title">Please enter a title.</string>
    <string name="notice_databases_reset">Local database reset.</string>
	<string name="section_featured">Featured</string>
	<string name="section_drafts">Drafts</string>
	<string name="section_nearby">Nearby</string>
	<string name="section_starred">Starred</string>
	<string name="section_all">All</string>
    <string name="cast_title_hint">Cast Title</string>
	<string name="add_to_project">Add to Project</string>
	<string name="add_cast_to_x"><b>Add Cast to</b> %1$s</string>
	<string name="edit_cast">Edit Cast</string>
	<string name="view_cast">View Cast</string>
	<string name="remove_cast">Remove Cast from Project</string>
	<string name="current_location">Current location: </string>
	<string name="cast_location">Cast location: </string>
	<string name="set_location">Set Location</string>
	<string name="my_casts">My Casts</string>
	<string name="casts_tags">Tags</string>
	<string name="view_casts_in_map">View casts in map</string>
	<string name="cast_publish_title">Publish Cast</string>
    <string name="action_record_cast">Record a cast</string>
    <string name="add_cast">Add Cast</string>
    <string name="description">Description</string>
    <string name="cast_play">Play Cast</string>
    <string name="notice_cast_saved_uploading">Cast saved. Uploading to server…</string>
    <string name="notice_cast_saved_no_network">Cast has been saved and will be uploaded when a network connection is established and the synchronization is started.</string>
    <string name="error_cast_saving">Error saving cast.</string>
    <string name="cast_recording_canceled">Recording canceled</string>
    <string name="cast_synchronizing">Synchronizing cast…</string>
    <string name="notice_cast_video_has_not_been_uploaded_yet">Cast video has not been uploaded yet.</string>
    <string name="error_cast_could_not_play_video">Could not play video.</string>
	<string name="error_cast_no_videos">Sorry, there aren\'t any videos for this cast yet.</string>
    <string name="cast_error_could_not_play_video_neither_net_nor_local">Could not play video as the network is disconnected and there is no cached copy.</string>
	<string name="cast_delete_title">Delete Cast</string>
	<string name="cast_delete_message">Are you sure you want to delete this cast? All shots will be lost.</string>
	<string name="project_title">Project Title</string>
	<string name="project_description">Project Description</string>
	<string name="project_no_casts">This project does not contain any casts. You can add a cast by pressing \'menu\'.</string>
	<string name="project_new_cast">Record a cast</string>
	<string name="project_pick_title">Pick a project</string>
	<string name="project_list_view_title">Projects</string>
    <string name="edit_project">Edit Project</string>
    <string name="add_project">Add Project</string>
	<string name="added_cast_to">Added cast to %s</string>
	<string name="project_you_joined">You have joined %s</string>
	<string name="project_you_left">You have left %s</string>
    <string name="error_loading_project">Error loading project.</string>
    <string name="video_recorder_error_could_not_make_directory">Could not make directory, \'%1$s\', for recording videos.</string>
    <string name="video_recorder_error_cannot_write_to_sd_card">Cannot write to SD card.</string>
	<string name="dialog_button_delete">Delete</string>
	<string name="dialog_button_rerecord">Rerecord</string>
	<string name="discussion_hint">Comment</string>
	<string name="location_link_no_location">No Location</string>
	<string name="location_link_accuracy_meter">±%.0f meters</string>
	<string name="location_link_accuracy_kilometer">±%.01f kilometers</string>
	<string name="done">Done</string>
	<string name="publish">Publish</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
   	<string name="wipe_database">Wipe Database</string>
	<string name="privacy_header">Privacy:</string>
	<string name="privacy_spinner">Privacy level</string>
    <string name="refresh">Refresh</string>
	<string name="sync_first">No local content detected. Starting first sync…</string>
	<string name="sync_notification">Synchronizing Open Locast…</string>
	<string name="sync_success">Sync successful.</string>
	<string name="sync_menu">Synchronize</string>
	<string name="sync_upload_success">Cast uploaded successfully.</string>
	<string name="sync_upload_success_message">\"%1$s\" has been uploaded.</string>
    <string name="error_uploading_cast_video">Error uploading cast video.</string>
	<string name="sync_upload_fail">Error uploading cast.</string>
	<string name="sync_upload_fail_message">\"%1$s\" failed to upload.</string>
    <string name="error_sync_canceled">Sync canceled.</string>
	<string name="error_sync">Could not synchronize with server. Do you have a network connection?</string>
	<string name="error_sync_no_post">Sorry, there was a problem uploading your media to the server. Please try synchronizing again.</string>
    <string name="error_sync_no_data_network">Cannot sync Open Locast: no data network. Please check your connection and try again.</string>
    <string name="sync_downloading_cast">Downloading \"%1$s\"…</string>
    <string name="sync_uploading_cast">Uploading \"%1$s\"…</string>
    <string name="username_label">Open Locast username</string>
    <string name="password_label">Password</string>
    <string name="login_message_authenticating">authenticating…</string>
    <string name="login_message_loginfail">Invalid username or password.</string>
    <string name="login_message_login_empty_password">Please enter a password.</string>
    <string name="login_message_login_empty_username">Please enter your Open Locast username and password.</string>
    <string name="login_title">%1$s Login</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?\nAll unsynced casts will be lost.</string>
    <string name="sync">Synchronize</string>
    <string name="syncing">Synchronizing…</string>
    <string name="no_pending_casts_to_sync">No pending casts to synchronize</string>
   	<string name="moment_description_hint">Briefly describe this moment (optional)</string>
	<string name="save_moment">Save Moment</string>
    <string name="error_moment_saving_moment">Error saving moment :-(</string>
    <string name="moment_saved">Moment saved.</string>
   	<string name="pref_cat_account">Account</string>
   	<string name="pref_title_username">Username</string>
   	<string name="pref_title_password">Password</string>
	<string name="pref_cat_advanced">Advanced</string>
	<string name="pref_title_server_url">Server URL</string>
	<string name="pref_locast_site">Open Locast Site</string>
	<string name="pref_locast_site_dialog_title">Choose an Open Locast site</string>
	<string name="pref_locast_site_summary">Choose another Open Locast site.</string>
	<string name="pref_locast_site_message">This will only affect any newly added accounts. To change this for the active instance you must first remove any existing accounts.</string>
	<string name="welcome_message">Welcome to Open Locast.</string>
	<string name="auth_signin_or_skip_notice">You\'ll need an account to upload photos and videos to Open Locast</string>
	<string name="auth_signin_for_favorites">In order to save your favorite casts, you\'ll need an Open Locast account.</string>
	<string name="auth_signin_register">Sign In / Register</string>
	<string name="auth_skip">Skip</string>
	<string name="title_casts">Casts</string>
	<string name="title_nearby">%1$s Nearby</string>
	<string name="title_favorited">Favorite %1$s</string>
	<string name="title_unfavorited">Non-favorite %1$s</string>
	<string name="collection_no_casts">There are no casts in this collection.</string>
	<string name="list_empty">No items in this list.</string>
	<string name="auth_username_hint">alice@example.org</string>
	<string name="auth_password_hint">password</string>
	<string name="auth_login">Login</string>
	<string name="auth_logout">Logout</string>
	<string name="auth_logout_title">%1$s Logout</string>
	<string name="auth_logout_message">This will log you out of %1$s and delete all synchronized content from your device.</string>
	<string name="auth_logout_error">There was an error logging you out.</string>
	<string name="empty_castmedia">There are no media in this cast.</string>
	<string name="error_cast_media_no_activities">We\'re sorry, but there doesn\'t seem to be a way to play this media on your device.</string>
	<string name="collections">Collections</string>
	<string name="nearby">Nearby</string>
	<string name="favorites">Favorites</string>
	<string name="error_no_featured_casts">There are no featured casts.</string>
	<string name="error_no_items_in_this_list">No items in this list.</string>
	<string name="featured_casts">Featured Casts</string>
	<string name="follow">Follow</string>
	<string name="unfollow">Unfollow</string>
	<string name="notice_finding_your_location">Finding your location…</string>
	<string name="auth_error_could_not_contact_server">Could not contact server.</string>
	<string name="auth_error_server_returned_invalid_data">Server returned invalid data.</string>
	<string name="auth_error_network_protocol_error">Network protocol error: %1$s</string>
	<string name="collection_detail_collection_by">Collection by %1$s</string>
	<string name="videoplayer_notice_loading_video">Loading video…</string>
	<string name="reset_database">Reset Database</string>
	<string name="cast_description_hint">Briefly describe the cast</string>
	<string name="tab_location">Location</string>
	<string name="tab_media">Media</string>
	<string name="tab_details">Details</string>
	<string name="cast_edit_select_media_type">Select media type</string>
	<string-array name="cast_edit_pick">
		<item >Video</item>
		<item >Picture</item>
	</string-array>
		<string name="auth_set_site">Set Open Locast Site</string>
		<string name="cast_edit_error_camera_did_not_return_image">Error: camera did not return an image. Please try again.</string>
		<string name="cast_edit_media_empty">Tap the buttons below to add photos and videos</string>
	<string name="loading_data">Loading data…</string>
	<string name="wait_location">Please wait while we add your current location to the cast you are creating. To improve GPS
reception, try standing in a clear area outside away from buildings.</string>
	<string name="need_more_time_to_retrieve_location">We need more time to retrieve your location. Press \'Continue\' to keep waiting or \'Stop\' to cancel the cast creation and try again later.</string>
	<string name="location_service_not_working">Location service not working</string>
	<string name="continue_res">Continue</string>
	<string name="location_unknown">Location: Finding…</string>
	<string name="thumbnail_content_description">thumbnail of item</string>
	<string name="new_photo">New Photo</string>
	<string name="new_video">New Video</string>
	<string name="pick_media_from_gallery">Pick Media from Gallery</string>
	<string name="remove_media">remove media from cast</string>
	<string name="media_title_hint">media title</string>
</resources>