<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/cast_edit_details"
>
<LinearLayout
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	
	
	android:paddingTop="5dip"
	android:paddingBottom="5dip"
	android:paddingLeft="30dip"
	android:paddingRight="30dip"
>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/description"
		style="@style/BodyEntryTitle"
	/>


	<EditText
		android:id="@+id/description"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:minLines="5"
		android:gravity="top|left"
		android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
		android:imeOptions="actionDone|flagNoEnterAction" android:hint="@string/cast_description_hint"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/casts_tags"
		style="@style/BodyEntryTitle"
	/>
	<edu.mit.mobile.android.locast.widget.TagList 
		android:id="@+id/tags"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" /> 
</LinearLayout>
</ScrollView>