<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar" />

    <TextView
        android:id="@+id/sign_in_or_skip_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:layout_centerHorizontal="true"
        android:layout_margin="40sp"
        android:gravity="center"
        android:text="@string/auth_signin_or_skip_notice" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_or_skip_notice"
        android:layout_centerHorizontal="true"
        android:text="@string/auth_signin_register" >

        <requestFocus />
    </Button>

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/sign_in"
        android:layout_alignRight="@id/sign_in"
        android:layout_below="@id/sign_in"
        android:layout_marginTop="20sp"
        android:text="@string/auth_skip" />

</RelativeLayout>