<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/media_thumbnail"
        android:layout_width="72dip"
        android:layout_height="72dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dip"
        android:adjustViewBounds="true"
        android:contentDescription="@string/thumbnail_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder" />

    <ImageButton
        android:id="@+id/remove"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/media_thumbnail"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/media_thumbnail"
        android:contentDescription="@string/remove_media"
        android:src="@drawable/ic_btn_remove" />

    <EditText
        android:id="@+id/cast_media_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/remove"
        android:layout_alignTop="@+id/remove"
        android:layout_toLeftOf="@+id/remove"
        android:layout_toRightOf="@+id/media_thumbnail"
        android:state_enabled="false"
        android:hint="@string/media_title_hint" />

</RelativeLayout>