<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/actionbar"
        layout="@layout/action_bar" />

    <TextView
        android:id="@android:id/title"
        style="@style/Notice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar"
        android:textStyle="normal"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/title" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/cast_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/title"
                android:layout_centerHorizontal="true"
                android:hint="@string/cast_title_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailSubject|textAutoCorrect|textCapSentences|textImeMultiLine"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/media_thumbnail"
                style="@style/Thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/cast_title"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="false"
                android:clickable="true"
                android:contentDescription="@string/thumbnail_content_description" />

            <ImageButton
                android:id="@+id/new_video"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_below="@+id/media_thumbnail"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/new_video"
                android:src="@drawable/ic_video" />

            <TextView
                android:id="@+id/location_status"
                style="@style/BodyEntryTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_video"
                android:text="@string/location_unknown" />

            <edu.mit.mobile.android.locast.widget.TagList
                android:id="@+id/tags"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_status" />

            <Button
                android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tags"
                android:text="@string/save" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>